--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Project: Travel webpage</title>
+        <title>10 Reasons You Should Visit Mexico</title>
     </head>
     <body>
         <style>
