--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
         <h1>The coolest creature</h1>
         <img src = "https://www.kasandbox.org/programming-images/animals/spider.png" width = "400" alt = "a spider on it's web">
-        <p>The <em>spider</em> is awesome because <strong>is awesome because it has senses so extraordinary that we can never even be able to <em>comprehend</em>
+        <p>The <em>spider</em><strong>is awesome because it has senses so extraordinary that we can never even be able to <em>comprehend them</em>
         </strong>.<br>
         such as<br>
         <ul>
-            <li>it has has microscopic hair on it's legss that dig into the space sbetween materials such as cement which allows them to climb</li>
-            <li>it has other hairs on it's body tat allow it to sense the tiniest vibration through air i.e someone hitting them with a chapal</li>
+            <li>it has microscopic hair on it's legs that dig into the space sbetween materials such as cement which allows them to climb</li>
+            <li>it has other hairs on it's body that allow it to sense the tiniest vibration through air i.e someone hitting them with a chapal</li>
         </ul>
         </p>
 
